# TelegramQuickView

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  ContactPage.qml  ConversationPage.qml  README.md  TargetChannels.txt  TelegramViewerApp.sln  TelegramViewerApp.vcxproj  TelegramViewerApp.vcxproj.filters  build.bat  build.ninja  cmake_install.cmake  history_extractor.session  history_extractor.session-journal  images.qrc  main.cpp  main.qml  requirements.txt
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
TelegramQuickView/src/css/: AudioSliderStyle.css  ChannelsScrollAreaStyle.css
TelegramQuickView/src/qss/: AudioSliderStyle.qss
cmake/: FindAVCodec.cmake  FindAVDevice.cmake  FindAVFilter.cmake  FindAVFormat.cmake  FindAVResample.cmake  FindAVUtil.cmake  lib_base.cmake  lib_ffmpeg.cmake  lib_gsl.cmake  lib_openal.cmake  lib_openh264.cmake  lib_openssl_common.cmake  lib_openssl_crypto.cmake  lib_openssl_ssl.cmake  lib_opus.cmake  lib_td.cmake
setup/: setup.iss
src/: Application.cpp  Application.h
src/core/: AutoRunUtils.cpp  AutoRunUtils.h  Concepts.h  Config.h  CoreConcurrent.h  CoreUtility.cpp  CoreUtility.h  Flags.h  InvokeQueued.h  MouseDetector.cpp  MouseDetector.h  PythonQtWrapper.h  String.cpp  String.h  StyleCore.cpp  StyleCore.h  StyleTypes.h  TextBlock.h  TextEntities.cpp  TextEntities.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Types.h
src/core/ffmpeg/: VideoThumbnail.cpp  VideoThumbnail.h
src/core/parser/: PythonCaller.cpp  PythonCaller.h  TelegramRobber.py  main.cpp  tel.py
src/core/sql/: SqlConnect.cpp  SqlConnect.h  SqlContactModel.cpp  SqlContactModel.h  SqlConversationModel.cpp  SqlConversationModel.h
src/core/utility/: Accumulate.h  Size.h
src/core/winapi/: AutoRunRegistryUtils.cpp  AutoRunRegistryUtils.h  FileIO.h  MessageHandler.cpp  MessageHandler.h  MouseDetector.cpp  MouseDetector.h
src/css/: ChatScrollAreaStyle.css  ScrollAreaStyle.css  SliderStyle.css  ToolButtonStyle.css  VideoSliderStyle.css
src/gl/: GlImage.h
src/gui/core/: ScrollBar.h  WidgetsHider.h
src/gui/media/: ClickableLabel.cpp  ClickableLabel.h  EnhancedSlider.cpp  EnhancedSlider.h  VolumeClickableLabel.cpp
src/gui/panel/: MessageWidget.cpp  MessageWidget.h  messageWidget.ui
src/gui/qml/: ContactPage.qml  ConversationPage.qml  main.qml  qml.qrc  themes.conf
src/gui/settings/: AuthenticationDialog.cpp  AuthenticationDialog.h  AuthorizationForm.cpp  AuthorizationForm.h  AuthorizationForm.ui  MainWindow.cpp  MainWindow.h  TelegramAuthorization.py  TelegramAuthorizationChecker.cpp  TelegramAuthorizationChecker.h  UserAuthentication.cpp  UserAuthentication.h  UserAuthenticationDialog.cpp  UserAuthenticationDialog.h  UserDataManager.cpp  UserDataManager.h  code.ui
src/media/: ClickableLabel.h  Manager.cpp  Manager.h  MediaCache.cpp  MediaCache.h  MediaCommon.cpp  MediaCommon.h  MediaItemBase.cpp  MediaItemBase.h  VolumeClickableLabel.cpp  WidgetsHider.h
src/media/cache/: MediaCache.cpp  MediaCache.h  MediaCacheGeneral.cpp  MediaCacheGeneral.h  MediaCachePrivate.cpp  MediaCachePrivate.h  MediaCacheUtility.h
src/media/ffmpeg/: FrameGenerator.cpp  FrameGenerator.h  Guard.h  HardwareAcceleration.cpp  HardwareAcceleration.h  Scale.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h  Time.cpp  Time.h  Utility.cpp  Utility.h
src/media/images/: ImagesBlur.cpp  ImagesBlur.h  ImagesBuffer.cpp  ImagesBuffer.h  ImagesPrepare.cpp  ImagesPrepare.h
src/media/player/: AbstractMediaPlayer.cpp  AbstractMediaPlayer.h  EnhancedSlider.cpp  EnhancedSlider.h  FullScreenButton.cpp  FullScreenButton.h  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerPanel.cpp  MediaPlayerPanel.h  SettingsButton.cpp  SettingsButton.h  SpeedButton.cpp  SpeedButton.h  VideoStateWidget.cpp  VideoStateWidget.h  VolumeController.cpp  VolumeController.h
src/opengl/: OpenGLImage.cpp  OpenGLImage.h
src/panel/: AbstractFlatButton.cpp  AbstractFlatButton.h  BasicClickHandlers.cpp  ClickHandler.cpp  ContinuousScroll.cpp  ContinuousScroll.h  FlatButton.cpp  FlatButton.h  FlatLabel.cpp  FlatLabel.h  History.cpp  History.h  MessageAttachment.cpp  MessageAttachment.h  MessageMediaViewer.cpp  MessageMediaViewer.h  MessageTextView.cpp  MessageTextView.h  MessageWidget.cpp  MessageWidget.h  NavigationButton.cpp  NavigationButton.h  ScrollArea.cpp  ScrollArea.h  TelegramPostQuickView.cpp  TelegramPostQuickView.h
src/panel/data/: SqlReader.cpp  SqlReader.h
src/parser/: AbstractTelegramParser.cpp  AbstractTelegramParser.h  AuthenticationDialog.cpp  AuthenticationDialog.h  OpenGLBlur.cpp  OpenGLBlur.h  PostSqlManager.cpp  PostSqlManager.h  SqlParserContentManager.py  TelegramAuthorizer.cpp  TelegramAuthorizer.h  TelegramParser.cpp  TelegramParser.h  TelegramRobber.cpp  TelegramRobber.h  TelegramRobber.py  UserDataManager.cpp  UserDataManager.h  main.cpp  utils.h  vertex.h
src/parser/data/: PostSqlManager.cpp  PostSqlManager.h  UserDataManager.cpp  UserDataManager.h
src/parser/effects/: OpenGLBlur.cpp  OpenGLBlur.h
src/settings/: AuthenticationDialog.cpp  AuthenticationDialog.h  MainWindow.cpp  MainWindow.h  TelegramAuthorizationChecker.cpp  TelegramAuthorizationChecker.h  TelegramAuthorizationChecker.py  TelegramAuthorizer.cpp  TelegramAuthorizer.h  TelegramParser.cpp  TelegramParser.h  UserDataManager.cpp  UserDataManager.h
src/sql/: SqlContentManager.cpp  SqlContentManager.h
src/ui/: BasicClickHandlers.cpp  BasicClickHandlers.h  ClickHandler.cpp  ClickHandler.h  MainQueueProcessor.cpp  WidgetsHider.h
src/ui/effects/: vertex.h
src/ui/gl/: GlImage.cpp  GlImage.h
src/ui/images/: ImagesBlur.cpp  ImagesBlur.h
src/ui/layouts/: AbstractLayoutItem.cpp  AbstractLayoutItem.h  AbstractMosaicLayout.cpp  AbstractMosaicLayout.h  MosaicLayout.h
src/ui/style/: StyleCore.cpp  StyleCore.h  StyleFont.cpp  StyleFont.h  StyleScale.h  StyleTypes.h  StyleWidgets.cpp  StyleWidgets.h
src/view/: History.cpp  History.h  MediaViewer.cpp  MediaViewer.h  Message.cpp  Message.h  MessageAttachment.cpp  MessageAttachment.h  MessagesView.cpp  MessagesView.h  TextView.cpp  TextView.h
(+156 files in other folders)
